fix #110 - sidebar doesnt jump when ui toggles on mobile

--- a/docs-src/nav/Nav.css
+++ b/docs-src/nav/Nav.css
@@ -1,7 +1,5 @@
 aside {
-	padding: 0 1rem 1rem;
 	border-right: 1px solid var(--ui-color-border-2);
-	height: 100%;
 	overflow-y: auto;
 	background: var(--ui-color-background);
 	position: fixed;
@@ -9,7 +7,8 @@ aside {
 
 	left: 0;
 	top: 0;
-	bottom: 0;
+	height: 100lvh;
+	padding: 0 1rem calc(100lvh - 100svh);
 
 	overscroll-behavior: contain;
 	z-index: 10;
